# http-server

./: .gitignore  LICENSE  README.md  compose.yaml
.github/workflows/: docker-publish-backend.yml  docker-publish-frontend.yml
backend/: CMakeLists.txt  Dockerfile  SingletonProvider.cpp  SingletonProvider.h  docker-entrypoint.sh  main.cpp  vcpkg.json
backend/cmake/: CMakeCache.txt
backend/configuration/: Configuration.cpp  Configuration.h
backend/configuration/abstract/: IConfiguration.h
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  FileAdder.tsx
frontend/src/components/: StatusIcon.tsx
frontend/src/types/: UiFile.ts
frontend/src/utils/: humanReadableFileSize.ts
proxy-config/: nginx.conf
proxy-config/sites-available/: generated
proxy-config/sites-enabled/: generated
